[package]
name = "db_explorer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"  # or "dotenv" if you prefer the older crate
log = "0.4"
env_logger = "0.11"